--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <a class="fa-brands fa-github" href="https://duckduckgo.com/" target="_blank"></a>
   </div>
 </body>
-</html> --> -->
+</html> -->
 
 
 
